Fixed the vertical alignment of the small eZ logo in Firefox and IE10

--- a/Resources/public/css/navigationhubview.css
+++ b/Resources/public/css/navigationhubview.css
@@ -47,6 +47,7 @@
 
 .ez-view-navigationhubview .ez-navigation .ez-logo img {
     height: 1.3em;
+    padding-top: 0.8em;
 }
 
 .ez-view-navigationhubview .ez-navigation {
